# sresult

./: CMakeLists.txt  README.md  no_railway_exception.cpp  railway_function.cpp  railway_lambda.cpp  railway_lambda_bench.cpp  railway_lambda_with_myvector.cpp  sresult.h
