cmake_minimum_required(VERSION 3.10)
project(sresult CXX)

option(USE_CPP23 "Build with C++23 standard" OFF)

if(USE_CPP23)
    if(MSVC)
        if(MSVC_VERSION GREATER_EQUAL 1950)
            add_compile_options(/std:c++23)
        else()
            add_compile_options(/std:c++23preview)
        endif()
    else()
        add_compile_options(-std=c++23)
    endif()
else()
    if(MSVC)
        add_compile_options(/std:c++17)
    else()
        add_compile_options(-std=c++17)
    endif()
endif()

if(WIN32)
    if(MSVC)
        add_compile_options(/source-charset:utf-8 /execution-charset:.932 /Zc:__cplusplus)
    else()
        add_link_options(-static)
        if(CMAKE_CXX_COMPILER_ID STREQUAL "GNU")
            # clangはUTF-8固定なので指定したくても出来ない
            add_compile_options(-fexec-charset=cp932)
        endif()
    endif()
endif()

set(TARGETS railway_lambda railway_function no_railway_exception railway_lambda_with_myvector railway_lambda_bench)
foreach(target ${TARGETS})
    add_executable(${target} ${target}.cpp)
endforeach()